fixed testimony title letter spacing

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -244,7 +244,7 @@ header
         font-family: "Fraunces", serif
         color: $grayish_blue
         text-align: center
-
+        letter-spacing: 0.2em
 
       .testimony-items
         display: flex
